--- a/template (4).Rmd
+++ b/template (4).Rmd
@@ -3,6 +3,182 @@ title: "Homework 2"
 output: html_document
 ---
 
+
+```{r}
+library (tidyverse)
+library(readxl)
+```
+
+##  Problem 1
+```{r}
+path_to_data = "./data/Trash-Wheel-Collection-Totals-8-19.xlsx"
+```
+
+```{r}
+trashwheel_df = read_xlsx("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
+  sheet= "Mr. Trash Wheel",
+  range= cell_cols("A:N"))%>%
+janitor::clean_names()%>%
+drop_na(dumpster)%>%
+mutate(
+  sports_balls = round(sports_balls),
+  sports_balls = as.integer(sports_balls)
+)
+```
+
+read precipitation data!
+
+```{r}
+precip_2018 =
+   read_xlsx("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
+  sheet = "2018 Precipitation",
+  skip = 1 
+  ) %>%
+  janitor::clean_names()%>%
+  drop_na(month)%>%
+  mutate (year = 2018)%>%
+  relocate (year)
+  
+  precip_2017 =
+    read_xlsx("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
+  sheet = "2017 Precipitation",
+  skip =1 
+  )%>%
+  janitor::clean_names()%>%
+  drop_na(month)%>%
+  mutate (year = 2017)%>%
+  relocate (year)
+```
+
+Combine annual precipitation
+
+```{r}
+month_df=
+  tibble(
+    month = 1:12,
+    month_name = month.name
+  )
+precip_df=
+  bind_rows(precip_2018, precip_2017)
+
+left_join(precip_df, month_df, by = "month")
+```
+This dataset is based on a trashwheel in Baltimore, MD tht is called Mr. Trashweel. Trash collect from the inner harbor in Baltimore is collected by the Mr. Trashwheel. Year, month (an additional month data frame was is created), trash collected, and types of trash are information within this dataset; nrow(precip_df)'24 rows in the final dataset.  
+
+## Problem 2
+
+```{r}
+library(readr)
+NYC_Transit_Subway_Entrance_And_Exit_Data <- read_csv("data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv")
+View(NYC_Transit_Subway_Entrance_And_Exit_Data)
+```
+
+```{r}
+transit_df =
+  read_csv(file = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv")%>%
+  janitor::clean_names()%>%
+  select(line:entry, vending, ada)%>%
+  mutate(entry= ifelse (entry== "yes", TRUE, FALSE))
+```
+
+This dataset "transit_df" consists of 1,868 rows and 19 columns. I used the clean_names function to clean my variables; the select function was used to keep variables from  line to entry as well as vending and ada; the mutate function changed the entry variable from a character to logical vector.
+
+How many distinct stations are there? Note that stations are identified both by name and by line (e.g. 125th St A/B/C/D; 125st 1; 125st 4/5); the distinct function may be useful here.
+There are 465 distinct stations.
+
+How many stations are ADA compliant. 468 stations are ADA compliant
+
+```{r sum}
+count(transit_df, ada)
+```
+
+What proportion of station entrances / exits without vending allow entrance? 
+69 stations without vending allow entry out of the total 183 station without vending... 38% of stations without vending allow entry
+
+```{r no vending}
+count(distinct(transit_df, line, station_name))
+
+transit_no_vend=
+  filter(transit_df, vending== "NO")
+```
+
+
+Reformat data so that route number and route name are distinct variables. How many distinct stations serve the A train? Of the stations that serve the A train, how many are ADA compliant?
+
+```{r long}
+Transit_sub_a=
+  Transit_tidy %>%
+  distinct(line, station_name, keep_all = TRUE)%>%
+  filter (route_number == "A")%>%
+  count()
+
+
+  Transit_sub_a_ada=
+  Transit_tidy %>%
+  distinct(line, station_name, keep_all = TRUE)%>%
+  filter (route_number == "A", ada == TRUE)%>%
+  count()
+
+```
+##Problem3
+
+```{r, message = FALSE, pols_df, message= FALSE, collapse = TRUE}
+month_df
+tibble(
+  month= 1:12
+  month_name=month.name
+)%>%
+  mutate(month = as.character(month))
+```
+
+
+```{r}
+pols_df= 
+  read_csv("./data/fivethirtyeight_datasets/pols-month.csv")%>%
+janitor::clean_names()%>%
+  separate(mon, sep = "-", into = c("year", "month", "day"))%>%
+  
+  mutate(year = as.integer(year),
+  month = as.integer(month),
+    president=
+      ifelse(prez_dem == 1,
+        {president = "dem"},
+        {president="gop"}))
+  
+pols_cleaned=
+  left_join(pols_df, month_df,by="month")%>%
+  select(-prez_gop,
+  -prez_dem,
+  -day)
+```
+
+```{r}
+snp_df= 
+  read_csv("./data/fivethirtyeight_datasets/snp.csv")%>%
+janitor::clean_names()%>%
+  separate(sep = "-", into = c("year", "month", "day"))%>%
+  
+  mutate(year = as.integer(year),
+  month = as.integer(month))
+```
+
+```{r}
+snp_df=
+  read_csv("./data/fivethirtyeight_datasets/snp.csv")%>%
+  janitor::clean_names()%>%
+  seperate("date", c("month", "day", "year"), sep="/")%>%
+  tibble(
+  month_name=month.name)%>%
+  mutate(month = as.character(month))
+  
+  
+  month= 1:12
+  month_name=month.name
+)%>%
+  mutate(month = as.character(month))
+```
+
+
 I'm an R Markdown document! 
 
 # Section 1
